--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <h1>Таблиця Шульте</h1>
     <p><span>Автор:</span> Дмитро Крамаренко 3КН-22м</p>
     <p><span>Час розробки:</span> 2023 рік</p>
-    <label id="label"><span>Час розробки:</span></label>
+    <label id="label"><span>Вибір розмірність:</span></label>
     <select id="select">
         <option value="3">3x3</option>
         <option value="4">4x4</option>
         <option value="5">5x5</option>
     </select>
     <form>
-        <label>Введите имя</label>
+        <label>Введіть ім'я</label>
         <input type="text" id="GetName">
       </form>
     <p id="time-display"></p>
