--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Таблиця Шульте</h1>
     <p><span>Автор:</span> Дмитро Крамаренко 3КН-22м</p>
-    <p><span>Час розробки:</span> 2023 рік</p>
+    <p><span>Рік створення:</span> 2023 рік</p>
     <label id="label"><span>Вибір розмірність:</span></label>
     <select id="select">
         <option value="3">3x3</option>
